docs: better document database related operations
