# docs/swagger.yaml
@@ -30,6 +30,15 @@ components:
       - column_name
       - type
       type: object
+    models.CreatePgMySqlDBPayload:
+      properties:
+        name:
+          description: Database name.
+          example: Users
+          type: string
+      required:
+      - name
+      type: object
     models.CreateTablePayload:
       properties:
         column_name:
@@ -55,12 +64,40 @@ components:
       required:
       - column_name
       type: object
+    models.ErrResp:
+      description: Operation Failed. Maybe invalid payload or internal server error.
+      properties:
+        code:
+          description: HTTP code.
+          example: 400
+          type: integer
+        message:
+          description: Error cause.
+          example: Malformed payload
+      type: object
+    models.InternalServerError:
+      description: Something wrong happened on the server.
+      properties:
+        code:
+          description: HTTP code.
+          example: 500
+          type: integer
+        message:
+          description: Error cause.
+          example: Something went wrong
+      type: object
     models.ListDatabasesResp:
+      description: A list of all available databases.
       properties:
         databases:
+          example:
+          - test
+          - prod
+          - main
           items:
             type: string
           type: array
+          uniqueItems: false
       type: object
     models.ListTablesResp:
       properties:
@@ -71,6 +108,7 @@ components:
           uniqueItems: false
       type: object
     models.SuccessResp:
+      description: Operation Succeeded.
       properties:
         success:
           type: boolean
@@ -113,7 +151,7 @@ paths:
       - General
   /database:
     get:
-      description: list databases
+      description: Get all the available databases.
       responses:
         "200":
           content:
@@ -121,8 +159,49 @@ paths:
               schema:
                 $ref: '#/components/schemas/models.ListDatabasesResp'
           description: OK
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/models.InternalServerError'
+          description: Internal Server Error
+      summary: List Databases
       tags:
-      - Databases
+      - Database
+    post:
+      description: |-
+        Creates a new database with the specified table schema.
+
+        **NOTE**: SQLite is Unsupported.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/models.CreatePgMySqlDBPayload'
+        description: Database Info
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/models.SuccessResp'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/models.ErrResp'
+          description: Bad Request
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/models.InternalServerError'
+          description: Internal Server Error
+      summary: Create a new Database
+      tags:
+      - Database
   /table:
     get:
       description: list tables
@@ -281,3 +360,5 @@ servers:
 tags:
 - description: general info about the API.
   name: General
+- description: general info about the API.
+  name: Database
